# seacts

./: .gitignore  README.md  conda_env.yml  conda_env_local.yml  conda_env_modal.yml  modal_baselines.py  modal_config.py  modal_data.py  modal_data_baselines.py  modal_environment_baselines.py  modal_log_dqn_behavior.py  modal_sweep_context_dqn.py  modal_train_dqn.py  modal_visualizations.py  pyproject.toml  requirements.txt
configs/: depmap_baselines.yaml
data/: README.md
scripts/: generate_poster_context_section.py  generate_poster_outputs.py  plot_baseline_results.py  poster_figures.py  pull_modal_results.sh  regenerate_poster.py  run_baselines.py  run_data_baselines.py  train_dqn.py  zip_submission.sh
seacts-submission/: README.md  conda_env_modal.yml  modal_ablate_dqn.py  modal_cancer_context_dqn.py  modal_data_baselines.py  modal_log_dqn_behavior.py  modal_sweep_context_dqn.py  modal_sweep_dqn.py  modal_train_dqn.py  modal_visualizations.py  setup.py
src/: __init__.py  baseline_runner.py  baselines.py  behavior_analysis.py  config.py  context_encoding.py  data.py  data_baseline_runner.py  depmap_files.py  dqn.py  environment.py  environment_baselines.py  environment_runner.py  episodes.py  metrics.py  modality_scores.py  replay_buffer.py  rl_runner.py  state_encoder.py  tracking.py  visualization.py  wandb_metrics.py
tests/: test_baseline_pipeline.py  test_behavior_analysis.py  test_context_encoding.py  test_data_baseline_pipeline.py  test_dqn_runner.py  test_environment.py  test_environment_baselines.py  test_modality_scores.py  test_state_encoder.py  (+1 more)
(+190 files in other folders)
