[project]
name = "seacts"
version = "0.1.0"
description = "Sequential evidence acquisition for cancer target selection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "wandb>=0.19",
]

[project.optional-dependencies]
dev = [
  "modal>=1.1",
  "pytest>=8.0",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
